2008-08-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclOOInfo.c (InfoObjectDefnCmd, InfoObjectMixinsCmd):
	fix # args displayed. [Bug 2048676]

2008-08-08  Don Porter  <dgp@users.sourceforge.net>S

	* generic/tclOOMethod.c (PushMethodCallFrame):	Added missing check
	for bytecode validity.  [Bug 2037727]

	* generic/tclProc.c (TclProcCompileProc):	On recompile of
	a proc, clear away any entries on the CompiledLocal list from the
	previous compile.  This will prevent compile of temporary variables
	in the proc body from growing the localCache arbitrarily large.

	* README:		Bump version number to 8.6a2
	* generic/tcl.h:
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Updates for 8.6a2 release.

2008-08-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/http/http.tcl: Remove 8.5 requirement.
	* library/http/pkgIndex.tcl:
	* unix/Makefile.in:
	* win/Makefile.in:
	* win/makefile.vc:

2008-08-11  Andreas Kupries  <andreask@activestate.com>

	* library/tm.tcl: Added a 'package provide' command to the
	generated ifneeded scripts of Tcl Modules, for early detection of
	conflicts between the version specified through the file name and
	a 'provide' command in the module implementation, if any. Note
	that this change also now allows Tcl Modules to not provide a
	'provide' command at all, and declaring their version only through
	their filename.

	* generic/tclProc.c (Tcl_ProcObjCmd): Fixed memory leak triggered
	* tests/proc.test: by procbody::test::proc. See [Bug 2043636].
	Added a test case demonstrating the leak before the fix. Fixed a
	few spelling errors in test descriptions as well.

2008-08-11  Don Porter  <dgp@users.sourceforge.net>

	* library/http/http.tcl:        Bump http version to 2.7.1 to account
	* library/http/pkgIndex.tcl:    for [Bug 2046486] bug fix.  This
	* unix/Makefile.in:             release of http now requires a